cmake_minimum_required(VERSION 3.21)
project(Projekt)

set(CMAKE_CXX_STANDARD 17)

add_executable(Projekt main.cpp Stworzenie.cpp Stworzenie.h Random.cpp Random.h Gracz.cpp Gracz.h RepozytoriumStworzen.cpp RepozytoriumStworzen.h Wynik.cpp Wynik.h Komputer.cpp Komputer.h Czlowiek.cpp Czlowiek.h Input.cpp Input.h Gra.cpp Gra.h MocSpecjalna.cpp MocSpecjalna.h)
